--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
-    "circles-el": "*"
+    "circles-el": "*",
+    "iron-icon": "^2.1.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
