--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "test"
   },
   "files": [
-    "*"
+    "bower_components/",
+    "*.js",
+    "*.html",
+    "*.md",
+    "*.json"
   ],
   "dependencies": {
     "glob": "^7.1.2"
