--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
     "circles-el": "*",
-    "iron-icons": "PolymerElements/iron-icons#^2.1.1"
+    "iron-icons": "PolymerElements/iron-icons#^2.1.1",
+    "empty-state-webdash": "jadjoubran/empty-state-webdash#^1.0.4"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
